Show net prices

--- a/lib/plausible_web/templates/billing/change_plan.html.eex
+++ b/lib/plausible_web/templates/billing/change_plan.html.eex
@@ -25,7 +25,7 @@
           'GBP': '£'
         }[plan.currency]
 
-        return currency + plan.price.gross
+        return currency + plan.price.net
       },
       fetchPlans() {
         var productIds = []
