--- a/lib/plausible_web/templates/billing/upgrade.html.eex
+++ b/lib/plausible_web/templates/billing/upgrade.html.eex
@@ -25,7 +25,8 @@
           'GBP': '£'
         }[plan.currency]
 
-        return currency + plan.price.gross
+        console.log(plan)
+        return currency + plan.price.net
       },
       fetchPlans() {
         var productIds = []
