--- a/lib/plausible_web/templates/site/settings_custom_domain.html.eex
+++ b/lib/plausible_web/templates/site/settings_custom_domain.html.eex
@@ -1,3 +1,24 @@
+<div class="rounded-md bg-yellow-50 dark:bg-transparent dark:border border-yellow-200 p-4">
+  <div class="flex">
+    <div class="flex-shrink-0">
+      <svg class="h-5 w-5 text-yellow-400 dark:text-yellow-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <div class="ml-3">
+      <h3 class="text-sm font-medium text-yellow-800 dark:text-yellow-400">
+        Deprecated feature
+      </h3>
+      <div class="mt-2 text-sm text-yellow-700 dark:text-yellow-300">
+        <p>
+        We are moving away from CNAME-based custom domains. If you're concerned about adblockers, we recommend
+        <%= link("setting up a proxy", class: "underline text-yellow-800 dark:text-yellow-400", to: "https://plausible.io/docs/proxy/introduction", target: "_blank") %> for your analytics script instead.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="shadow bg-white dark:bg-gray-800 sm:rounded-md sm:overflow-hidden py-6 px-4 sm:p-6">
   <header class="relative">
     <h2 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100">Custom domain</h2>
