Some improvements to pagination in dark mode

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -308,5 +308,5 @@ iframe[hidden] {
 }
 
 .pagination-link[disabled] {
-  @apply cursor-default bg-gray-100 pointer-events-none;
+  @apply cursor-default bg-gray-100 dark:bg-gray-300 pointer-events-none;
 }
