Revert "Adds manual filters on FE, capability for exclusion filters (and the globbing we're used to) for path-based filters (#1067)"
This reverts commit e22d29305eb0ce23206f8a815e07fc3e403e49d2.

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -38,6 +38,7 @@
 .modal__container {
   background-color: #fff;
   padding: 1rem 2rem;
+  max-width: 860px;
   border-radius: 4px;
   margin: 50px auto;
   box-sizing: border-box;
