--- a/lib/plausible_web/templates/auth/register_from_invitation_form.html.eex
+++ b/lib/plausible_web/templates/auth/register_from_invitation_form.html.eex
@@ -3,7 +3,7 @@
   <div class="text-xl font-medium">Set up privacy-friendly analytics with just a few clicks</div>
 </div>
 
-<%= form_for @changeset, Routes.auth_path(@conn, :register_from_invitation_form, @invitation.invitation_id), [class: "w-full max-w-md mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 py-6 mb-4 mt-8", id: "register-form"], fn f -> %>
+<%= form_for @changeset, Routes.auth_path(@conn, :register_from_invitation_form, @invitation.invitation_id), [class: "w-full max-w-md mx-auto bg-white dark:bg-gray-800 shadow-md rounded px-8 py-6 mb-4 mt-8"], fn f -> %>
   <h2 class="text-xl font-black dark:text-gray-100">Enter your details</h2>
   <div class="my-4">
     <div class="flex justify-between">
