Fix error with multiple invitations
The /activate page would error out when the user had more than 1
invitation. Will work as expected now. Fixes #1147

--- a/lib/plausible_web/templates/auth/activate.html.eex
+++ b/lib/plausible_web/templates/auth/activate.html.eex
@@ -47,7 +47,7 @@
     </div>
   <% end %>
 
-  <%= if !@invitation do %>
+  <%= if !@has_invitation do %>
     <div class="pt-12 pl-8 hidden md:block">
       <%= render(PlausibleWeb.AuthView, "_onboarding_steps.html", current_step: 1) %>
     </div>
