Add filter groups (#1167)
* Add filter groups

* New flow for filters

* Visual consistency

* Mobile improvements to dropdown

* Do not let filters wrap on a new line

* Fix country filter

* Add mix format to pre-commit configuration

* Make eslint happy

* Fix formatting

* Use transition from headlessUI

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -315,3 +315,16 @@ iframe[hidden] {
 .pagination-link[disabled] {
   @apply cursor-default bg-gray-100 dark:bg-gray-300 pointer-events-none;
 }
+
+.flatpickr-calendar.static.open {
+  top: 12px;
+}
+
+@media (max-width: 768px) {
+  .flatpickr-wrapper {
+    position: absolute!important;
+    right: 0!important;
+    left: 0!important;
+  }
+}
+
