--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -31,7 +31,7 @@
   bottom: 0;
   background: rgba(0,0,0,0.6);
   z-index: 99;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto;
 }
 
