--- a/lib/plausible_web/templates/site/new.html.eex
+++ b/lib/plausible_web/templates/site/new.html.eex
@@ -1,6 +1,7 @@
 <div class="w-full max-w-3xl mt-4 mx-auto flex">
   <%= form_for @changeset, "/sites", [class: "max-w-lg w-full mx-auto bg-white dark:bg-gray-800 shadow-lg rounded px-8 pt-6 pb-8 mb-4 mt-8"], fn f -> %>
     <h2 class="text-xl font-black dark:text-gray-100">Your website details</h2>
+
     <%= if @is_at_limit do %>
       <div class="rounded-md bg-yellow-50 dark:bg-transparent dark:border border-yellow-200 p-4 mt-4">
         <div class="flex">
@@ -22,6 +23,26 @@
         </div>
       </div>
     <% end %>
+
+    <%= if is_nil(@current_user.trial_expiry_date) do %>
+      <div class="rounded-md bg-blue-50 dark:bg-transparent dark:border border-blue-200 p-4 mt-4">
+        <div class="flex">
+          <div class="flex-shrink-0">
+            <svg class="h-5 w-5 text-blue-500 dark:text-blue-300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          <div class="ml-3">
+            <div class="text-sm text-blue-700 dark:text-blue-300">
+              <p>
+              When you create your first site, your account will enter a 30 day free trial.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
     <div class="my-6">
       <%= label f, :domain, class: "block text-sm font-medium text-gray-700 dark:text-gray-300" %>
       <p class="text-gray-500 dark:text-gray-400 text-xs mt-1">Just the naked domain or subdomain without 'www'</p>
